<resources>
	<string name="app_name">Magister</string>
	<string name="author">Max Verbeek, Sibren Talens</string>

	<string name="action_settings">Instellingen</string>
	<string name="action_refresh">Ververs</string>
	<string name="logout">Log uit</string>
	<string name="nav_open">Open</string>
	<string name="nav_close">Sluit</string>

	<string name="volgende_uur">Volgende uur</string>
	<string name="laatste_cijfers">Laatste Cijfers</string>
	<string name="alle_cijfers">Alle Cijfers</string>
	<string name="title_activity_settings">Instellingen</string>

	<string name="empty_cijfers">Er zijn geen cijfers gevonden.</string>
	<string name="empty_cijfers_recent">Je hebt onlangs geen cijfers terug gekregen.</string>
	<string name="empty_afspraken">Er zijn geen lessen gevonden.</string>

	<string name="hello_world">Jemoeder is gay!</string>

	<string name="login">Log in</string>
	<string name="school_text">School</string>
	<string name="password_text">Wachtwoord</string>
	<string name="username_text">Gebruikersnaam</string>
	<string name="frequency_text">Hoeveelheid updates</string>

	<string name="frequency_desc">Hoeveel updates per dag?</string>

	<string name="no_internet">Je hebt momenteel geen internet. Probeer het later opnieuw.</string>
	<string name="error_generic">Er is iets mis gegaan. Probeer het later opnieuw.</string>
	<string name="no_internet_cache">Je hebt nu geen internet. Dit zijn oude gegevens.</string>
	<string name="credential_failure">De gegevens die je hebt ingevuld zijn onjuist.</string>

	<string name="nav_dashboard">Dashboard</string>
	<string name="nav_rooster">Rooster</string>
	<string name="nav_cijfers">Cijfers</string>
	<string name="nav_settings">Instellingen</string>

	<string name="gaben">Gaben.</string>

	<string name="credentials_title">Inlog gegevens</string>
	<string name="frequency_title">Updates</string>
	<string name="title_activity_cijfer_detail">CijferDetail</string>
</resources>
