<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_text_vertical_spacing"
        android:layout_width="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/school_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/school_text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_text_vertical_spacing"
        android:layout_width="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_text_vertical_spacing"
        android:layout_width="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>